css js index finish

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,9 @@
       <button id="boton-3d">Generate EXCUSE</button></div>
       <p id="excuseOutput"></p>
          
-        Made with ❤️ FOR
+        <footer>Made with ❤️ FOR 
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        </footer>
       </div>
     </div>
   </body>
