--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
-    <link rel="stylesheet" href="./src/index.css">
+    <link rel="stylesheet" href="/src/style.css">
   
   </head>
   <body>
